infrastructure_tooling/cert_manager/vault-ingres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  annotations:
    metallb.universe.tf/address-pool: addr-pool
spec:
  type: LoadBalancer
  selector:
    app: vault
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8200
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: bmosan-cert
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: vault
spec:
  ingressClassName: traefik
  rules:
  - host: vault.bmosan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              name: http
  tls:
  - hosts:
    - vault.bmosan.com
    secretName: vault-com
